<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/theme_red"
    android:gravity="center"
    tools:context=".RegistrationSignIn.RegisterActivity">

    <ImageView
        android:layout_width="130dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        android:src="@drawable/taxi_icon"
        android:layout_marginTop="@dimen/dimen_32"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CAB BOOK"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_gravity="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/dimen_80"
        android:gravity="center">

        <Button
            android:id="@+id/btnSignup"
            android:layout_width="@dimen/dimen_300"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_background"
            android:textColor="@color/white"
            android:textSize="@dimen/dimen_12sp"
            android:text="@string/new_user_sign_up_now"/>


        <Button
            android:id="@+id/btnSignin"
            android:layout_width="@dimen/dimen_300"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/signin_btn_background"
            android:layout_marginTop="20dp"
            android:textSize="@dimen/dimen_12sp"
            android:textColor="@color/theme_red"
            android:text="@string/sign_in"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/dimen_20"
            android:textSize="14sp"
            android:textColor="@color/white"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_use_social_account"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"
            android:layout_marginTop="40dp"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">

            <ImageView
                android:id="@+id/ivFb"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/fb_reg_icon"/>

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/google_reg_icon"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>