<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/white"
        card_view:cardCornerRadius="@dimen/dimen_8dp"
        card_view:cardElevation="@dimen/dimen_5dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimn_200"
                android:src="@drawable/dummy_image_map"
                android:scaleType="centerCrop"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/white">


                    <ImageView
                        android:layout_width="@dimen/dimen_50"
                        android:layout_height="@dimen/dimen_50"
                        android:src="@drawable/taxi_logo"
                        android:scaleType="centerCrop"
                        android:layout_marginLeft="@dimen/dimen_10"
                        android:layout_marginRight="@dimen/dimen_10"/>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_weight="2">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_23rd_feb_2018_at_8_30_am"
                            android:layout_marginTop="@dimen/dimen_10"
                            android:textColor="@color/theme_red"
                            android:layout_marginLeft="@dimen/dimen_10"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/booking_id_1234567890"
                            android:textSize="@dimen/dimen_12sp"
                            android:layout_marginLeft="@dimen/dimen_10"
                            />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginRight="@dimen/dimen_10">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/_25"
                            android:layout_marginTop="@dimen/dimen_10"
                            android:textColor="@color/theme_red"
                            android:textStyle="bold"/>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sedan"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>