<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".RegistrationSignIn.SignUpActivity">

    <ScrollView
        android:id="@+id/svRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/regBottomBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            >

            <include layout="@layout/appbar"
                android:id="@+id/appBar"
                android:layout_height="@dimen/dimen_60"
                android:layout_width="match_parent"
                android:layout_alignParentTop="true"
                />

        <TextView
            android:id="@+id/tvRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_below="@+id/appBar"
            android:layout_centerHorizontal="true"
            android:textSize="16sp"
            android:layout_marginTop="@dimen/dimen_20"
            android:textColor="@color/theme_red"
            />


        <LinearLayout
            android:id="@+id/llFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/tvRegister"
            android:layout_marginLeft="@dimen/dimen_32"
            android:layout_marginRight="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_18"
            android:layout_gravity="center">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/firstname_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name"
                    android:textSize="14sp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/llFirstName"
            android:layout_marginLeft="@dimen/dimen_32"
            android:layout_marginRight="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_18"
            android:layout_gravity="center">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/lastname_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name"
                    android:textSize="14sp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/llEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/llLastName"
            android:layout_marginLeft="@dimen/dimen_32"
            android:layout_marginRight="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_18"
            android:layout_gravity="center">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/email_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="14sp"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/llMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/llEmail"
            android:layout_marginLeft="@dimen/dimen_32"
            android:layout_marginRight="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_18"
            android:layout_gravity="center">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/mobile_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:textSize="14sp"/>

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/llMobile"
            android:layout_marginLeft="@dimen/dimen_32"
            android:layout_marginRight="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_18"
            android:layout_gravity="center">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/password_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:layout_weight="1"
                    android:textSize="14sp"/>

            </android.support.design.widget.TextInputLayout>

            <ImageView
                android:id="@+id/ivShowPass"
                android:layout_width="30dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:src="@drawable/eye"
                android:layout_weight="0.5"/>

        </LinearLayout>

            <LinearLayout
                android:id="@+id/llConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@+id/llPassword"
                android:layout_marginLeft="@dimen/dimen_32"
                android:layout_marginRight="@dimen/dimen_32"
                android:layout_marginTop="@dimen/dimen_18"
                android:layout_gravity="center">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/cnfrmpassword_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/etCnfrmPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:layout_weight="1"
                        android:textSize="14sp"/>

                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/ivShowCpass"
                    android:layout_width="30dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:src="@drawable/eye"
                    android:layout_weight="0.5"/>

            </LinearLayout>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginLeft="@dimen/dimen_32"
            android:layout_marginRight="@dimen/dimen_32"
            android:layout_marginTop="@dimen/dimen_18"
            android:background="@drawable/button_background"
            android:layout_below="@+id/llConfirmPassword"
            android:text="@string/register"
            android:textColor="@color/white"
            />


        <TextView
            android:id="@+id/tvOnRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_register_with"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black"
            android:layout_below="@+id/btnRegister"
            android:layout_marginTop="@dimen/dimen_20"/>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvOnRegister"
            android:layout_marginTop="@dimen/dimen_10"
            android:layout_centerHorizontal="true">


            <ImageView
                android:id="@+id/ivFb"
                android:layout_width="@dimen/dimen_50"
                android:layout_height="@dimen/dimen_50"
                android:src="@drawable/facebook_icon"
                android:layout_marginRight="@dimen/dimen_10"/>

            <ImageView
                android:id="@+id/ivGoogle"
                android:layout_width="@dimen/dimen_50"
                android:layout_height="@dimen/dimen_50"
                android:layout_toRightOf="@id/ivFb"
                android:src="@drawable/google_icon"/>

        </RelativeLayout>

        </RelativeLayout>

    </ScrollView>

    <include layout="@layout/bottom_signin_bar"
        android:layout_height="@dimen/dimen_40"
        android:layout_width="match_parent"
        android:id="@+id/regBottomBar"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>